# open-dynamic-workflows

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  config.example.toml  package.json  pyproject.toml
.github/workflows/: release.yml
agents/: openai.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
docs/: ROADMAP.md  dynamic-workflows-research.md  dynamic-workflows-tech-plan.md  odw-client.html  odw-dashboard-prototype.html
docs/tasks/: cli.md
examples/: adversarial-verify.js  fan-out-reduce.js  loop-until-dry.js
references/: adapters.md
scripts/: agent_fanout.py  embed-dashboard.mjs  install.sh
scripts/agent_fanout/: __init__.py  cli.py  config.py  core.py  workspace.py
skill/: SKILL.md
skill/references/: adapters.md  primitives.md
src/: cli.ts  dashboard.generated.ts  dashboard.html  index.ts  primitives.ts  skill.generated.ts
src/adapters/: runner.ts
src/runtime/: file-control.ts  index.ts  launcher.ts  login-path.ts  run-store.ts  runs-view.ts  server.ts  worker.ts
tests/: cli-runtime.test.ts  examples.test.ts  file-control.test.ts  launcher-run.test.ts  login-path.test.ts  primitives.test.ts  run-store.test.ts  runner.test.ts  server.test.ts  test_agent_fanout.py  worker.test.ts
web/src/: dag.ts  native.ts  shell.ts  store.ts  theme.css  types.ts  util.ts
web/src/views/: activity.ts  job.ts
