[project]
name = "agent-fanout-skill"
version = "0.1.0"
description = "Agent Skill for fan-out and raw collection across multiple coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Daniel Xing" }]
dependencies = [
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
]

[project.scripts]
agent-fanout = "agent_fanout.cli:main"
agent-fanout-plan = "agent_fanout.cli:plan_main"
agent-fanout-execute = "agent_fanout.cli:execute_main"
agent-fanout-review = "agent_fanout.cli:review_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/agent_fanout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
